--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
 
-    <title>Starter Template for Bootstrap</title>
+    <title>{{competition_title}}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
