--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -46,9 +46,14 @@
             <tbody>
             {% for participant in participants %}
             <tr>
-                <td>{{ participant.name }}</td>
+                <td>{{ participant.name }}
+                    {% if participant.error %}
+                    <p>Error: {{ participant.error }}</p>
+                    {% endif %}
+                </td>
                 <td>{{ participant.description }}</td>
                 <td>{{ participant.python_version }}</td>
+
 
             </tr>
             {% endfor %}
