--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -46,14 +46,14 @@
             <tbody>
             {% for participant in participants %}
             <tr>
-                <td>{{ participant.name }}
-                    {% if participant.error %}
-                    <p>Error: {{ participant.error }}</p>
-                    {% endif %}
-                </td>
-                <td>{{ participant.description }}</td>
-                <td>{{ participant.python_version }}</td>
-
+                {% if participant.error %}
+                    <td>{{ participant.name }}</td>
+                    <td colspan="2" style="color: red"> Error: {{ participant.error }}</td>
+                {% else %}
+                    <td>{{ participant.name }}</td>
+                    <td>{{ participant.description }}</td>
+                    <td>{{ participant.python_version }}</td>
+                {% endif %}
 
             </tr>
             {% endfor %}
