--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -45,6 +45,7 @@
                 <th>Task 1 (BIoU)</th>
                 <th>Task 2 (IoU)</th>
                 <th>Task 2 (BIoU)</th>
+                <th>Score</th>
             </tr>
             </thead>
             <tbody>
@@ -61,6 +62,7 @@
                     <td>{{ participant.biou1 }}</td>
                     <td>{{ participant.iou2 }}</td>
                     <td>{{ participant.biou2 }}</td>
+                    <td>{{ participant.score }}</td>
                 {% endif %}
 
             </tr>
