--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -34,7 +34,7 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>Participants for {{ competition_title }}</h1>
+        <h1>Teams for the {{ competition_title }}</h1>
         <table id="data" class="table table-striped">
             <thead>
             <tr>
