Updated web to include README.md

--- a/.github/web/src/templates/index.html
+++ b/.github/web/src/templates/index.html
@@ -69,6 +69,13 @@
             {% endfor %}
             </tbody>
         </table>
+
+        <hr>
+        <div style="text-align: left">
+        {{readme_data|safe}}
+        </div>
+
+
     </div>
 
 </main><!-- /.container -->
